@@ -1,4 +1,4 @@
-/* $Id: ttkInit.c,v 1.11 2010/02/05 17:42:21 nijtmans Exp $
+/* $Id: ttkInit.c,v 1.12 2010/02/05 21:33:14 jenglish Exp $
  * Copyright (c) 2003, Joe English
  *
  * Ttk package: initialization routine and miscellaneous utilities.
@@ -13,7 +13,7 @@
  * Legal values for the button -default option.
  * See also: enum Ttk_ButtonDefaultState.
  */
-const char *const ttkDefaultStrings[] = {
+const char *ttkDefaultStrings[] = {
     "normal", "active", "disabled", NULL
 };
 
@@ -29,7 +29,7 @@ int Ttk_GetButtonDefaultStateFromObj(
  * Legal values for the -compound option.
  * See also: enum Ttk_Compound.
  */
-const char *const ttkCompoundStrings[] = {
+const char *ttkCompoundStrings[] = {
     "none", "text", "image", "center",
     "top", "bottom", "left", "right", NULL
 };
@@ -46,7 +46,7 @@ int Ttk_GetCompoundFromObj(
  * Legal values for the -orient option.
  * See also: enum Ttk_Orient.
  */
-const char *const ttkOrientStrings[] = {
+const char *ttkOrientStrings[] = {
     "horizontal", "vertical", NULL
 };
 
@@ -62,7 +62,7 @@ int Ttk_GetOrientFromObj(
  * Recognized values for the -state compatibility option.
  * Other options are accepted and interpreted as synonyms for "normal".
  */
-static const char *const ttkStateStrings[] = {
+static const char *ttkStateStrings[] = {
     "normal", "readonly", "disabled", "active", NULL
 };
 enum { 
@@ -259,7 +259,7 @@ static void RegisterThemes(Tcl_Interp *interp)
  * Ttk initialization.
  */
 
-extern const TtkStubs ttkConstStubs;
+extern const TtkStubs ttkStubs;
 
 MODULE_SCOPE int
 Ttk_Init(Tcl_Interp *interp)
@@ -276,8 +276,7 @@ Ttk_Init(Tcl_Interp *interp)
 
     Ttk_PlatformInit(interp);
 
-    Tcl_PkgProvideEx(interp, "Ttk", TTK_PATCH_LEVEL,
-	    (ClientData) &ttkConstStubs);
+    Tcl_PkgProvideEx(interp, "Ttk", TTK_PATCH_LEVEL, (ClientData)&ttkStubs);
 
     return TCL_OK;
 }
